feat-middleware: bearer token handler
